# haive-core

./: .gitignore  .pre-commit-config.yaml  COMPREHENSIVE_RECOVERY_PLAN.md  FILES_TO_FIX.md  HAIVE_CORE_FIXES_GUIDE.md  README.md  RECOVERY_SUMMARY_JULY_22.md  RETRIEVER_GUIDE.md  allure-results  graphs  how 68997794ec1f9acf1ff278dec7e5eb41f9616183  logs  model_comparison.json  pyproject.toml  pytest.ini  rebuild_docs.sh  rebuild_docs_background.sh  report.html  requirements.txt  resources  system_requirements.txt  test_base_class_selection.py  test_basic_tool_routing.py  test_output  test_retriever_configs.py  test_retriever_instantiation.py  tool_route_mixin_enhancements.patch  tool_system_unified.patch  trunk_baseline.txt  trunk_baseline_20250728_045345.txt
.claude/agents/: haive-architecture-analyzer.md
.github/workflows/: docs.yml  publish.yml
.trunk/: .gitignore  trunk.yaml
.venv-manual/: pyvenv.cfg
debug_visualizations/: TestRAGWorkflow_20250423_012648.html  TestRAGWorkflow_20250423_012828.html  TestRAGWorkflow_20250423_012947.html  TestRAGWorkflow_20250423_013015.html  TestRAGWorkflow_20250423_013117.html  TestRAGWorkflow_20250423_013221.html  TestRAGWorkflow_20250423_013532.html  TestRAGWorkflow_20250423_013628.html  TestRAGWorkflow_20250423_013712.html  TestRAGWorkflow_20250423_013714.html  TestRAGWorkflow_20250423_014000.html  TestRAGWorkflow_20250423_014107.html  TestRAGWorkflow_20250423_014200.html  TestRAGWorkflow_20250423_014231.html  TestRAGWorkflow_20250423_014530.html  TestRAGWorkflow_20250423_014813.html
docs/: NODE_SCHEMA_COMPOSER_GUIDE.md  NODE_SCHEMA_COMPOSER_STATUS.md  STATE_SCHEMA_VALIDATION_INTEGRATION.md  UNIFIED_SCHEMA_ARCHITECTURE.md  VALIDATION_NODE_INTEGRATION_GUIDE.md  field_mapping.md  index.rst  multi_agent_systems.md  node_analysis_requirements.md  node_io_analysis.md  node_schema_composer_design.md  node_schema_composer_implementation_plan.md  node_schema_composer_progress.md
docs/scripts/: build-docs-with-logging.sh
docs/source/: additional_resources.rst  api_reference.rst  available_extensions_analysis.md  concepts.rst  conf.py  conf.py.backup  conf.py.fixes  configuration.rst  documentation_enhancements_notes.md  documentation_enhancements_summary.md  enhancement_plan.md  examples.rst  extensions_comparison.md  extensions_summary.md  furo_template_enhancements.md  getting_started.rst  index.rst  index.rst.tmp.13365.1755537161655  installation.rst  overview.rst  vectorstore_example_enhanced.rst
examples/: GALLERY_HEADER.rst  README.md  advanced_node_patterns.py  debug_agent_integration.py  logging_advanced_demo.py  logging_control_demo.py  logging_source_demo.py  logging_where_from_demo.py  meta_agent_example.py  node_composer_examples.py  provider_discovery_demo.py  simple_store_test.py  simple_validation_test.py  state_schema_integration_example.py  state_updating_validation_example.py  store_memory_agent.py  test_minimal_augllm.py  test_tool_decorator.py  tool_engine_example.py  unified_schema_integration.py
graph_visualizations/: TestRAGWorkflow_20250423_014534.html  TestRAGWorkflow_20250423_014814.html
haive_core/core/: config.py  constants.py  settings.py
logs/: report.html
scripts/: build-docs-with-logging.sh  docstring_dry_run_validator.py  enable_auto_logging.sh  fix_docstrings_to_doctest.py
sql/: supabase_schema_setup.sql
src/haive/: __init__.py.backup_20250819_145631
src/haive_core/: LICENSE  README.md
temp_refactor/state_graph/: IMPLEMENTATION_PLAN.md  MIGRATION.md  README.md  __init__.py  graph.py  schema_graph.py
tests/: check_state_schema.py  check_state_schema_clean.py  conftest.py  simple_test_minimal.py  test_abstract_registry.py  test_agent_node_v3_isolated.py  test_agent_node_v3_with_simple_agent.py  test_autoapi_config.py  test_basic.py  test_basic_no_persistence.py  test_basic_with_fix.py  test_callable_node_examples.py  test_clean_output_format.py  test_debug_exact_location.py  test_debug_output_issue.py  test_debug_output_simple.py  test_debug_prompt_template.py  test_duplication_debug.py  test_duplication_fix_clean.py  test_duplication_fixed.py  test_dynamic_activation_pattern.py  test_engine_attribution.py  test_engine_attribution_demo.py  test_engine_attribution_simple.py  test_engine_attribution_usage.py  test_engine_node_comparison.py  test_enhanced_tool_routing.py  test_fix_duplication.py  test_general.py  test_generic_engine_node_comprehensive.py  test_inheritance_hierarchy.py  test_introspection.py  test_messages_state_with_token_usage.py  test_meta_agent_state_simple_v2.py  test_meta_state_core_functionality.py  test_meta_state_integration.py  test_meta_state_refactored.py  test_output_comparison.py  test_postgres_store.py  test_prompt_debug.py  (+16 more)
tests/config/: test_runnable_config_manager.py
tests/contracts/: test_contract_system.py  test_enhanced_prompt_config.py  test_full_integration.py  test_tool_prompt_extraction.py
tests/debug/: diagnose_node_return.py  reproduce_exact_error.py  reproduce_notebook_exact.py  show_actual_output.py  simple_debug.py  test_aug_llm_duplication_debug.py  test_enhanced_detection.py  test_instance_debug.py  test_instance_success.py  test_minimal_instance_debug.py  test_with_structured_output_debug.py  trace_error.py
tests/docs/: test_sphinx_import.py
tests/examples/: example_proper_plan_execute.py  fixed_plan_execute_state.py  visualize_agent_example.py
tests/fixtures/: __init__.py  documents.py
tests/general/: debug_build_method.py  debug_engine_tracking.py  debug_prompt_template_conversion.py  debug_prompt_template_conversion.py.backup_0  debug_schema_base_class.py  debug_schema_composition.py  debug_schema_detection.py  debug_with_logging.py
tests/graph/: test_base_graph.py  test_basegraph_integration.py  test_complex_visualization.py  test_dynamic_graph.py  test_graph_builder.py  test_rag_workflow.py  test_state_graph.py  test_state_graph_with_patterns.py
tests/integration/: test_aug_llm_config_fixed.py  test_enhanced_naming_integration.py  test_step1_tool_route_mixin_tool_engine.py  test_step2_tool_engine_aug_llm_config.py  (+2 more)
(+2137 files in other folders)
