[tool.poetry]
name = "haive-core"
version = "0.1.0"
description = "haive-core for Haive framework"
authors = ["pr1m8 <william.astley@algebraicwealth.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "haive", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
# Core framework dependencies only
pydantic = "^2.10.6"
langchain = "^0.3.20"
langchain-core = "^0.3.44"
langgraph = "^0.3.5"
langchain-community = "^0.3.27"
langchain-huggingface = "^0.3.0"
pre-commit = "^4.2.0"
langgraph-checkpoint-postgres = "^2.0.23"
pymupdf4llm = "^0.0.27"
streamlit = "^1.47.1"
plotly = "^6.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest-sugar = "^1.0.0"
pytest-asyncio = "^0.26.0"
allure-pytest = "^2.14.2"
pytest-clarity = "^1.0.1"
pytest-html = "^4.1.1"


[tool.poetry.extras]
# Individual provider extras
openai = ["langchain-openai"]
anthropic = ["langchain-anthropic"]
google = ["langchain-google-genai", "langchain-google-vertexai"]
azure = ["langchain-openai"]
aws = ["langchain-aws"]
mistral = ["langchain-mistralai"]
groq = ["langchain-groq"]
cohere = ["langchain-cohere"]
together = ["langchain-together"]
fireworks = ["langchain-fireworks"]
huggingface = ["langchain-huggingface"]
ai21 = ["langchain-ai21"]
nvidia = ["langchain-nvidia-ai-endpoints"]
ollama = ["langchain-ollama"]
upstage = ["langchain-upstage"]
databricks = ["langchain-databricks"]
ibm = ["langchain-ibm"]
xai = ["langchain-xai"]

# Retriever provider extras
vector-store = ["langchain-core"]
multi-query = ["langchain"]
ensemble = ["langchain"]
bm25 = ["langchain-community", "scikit-learn"]
tfidf = ["langchain-community", "scikit-learn"]
knn = ["langchain-community", "scikit-learn"]
svm = ["langchain-community", "scikit-learn"]
contextual-compression = ["langchain"]
parent-document = ["langchain"]
self-query = ["langchain"]
time-weighted = ["langchain"]
elasticsearch = ["langchain-community", "elasticsearch"]
pinecone = ["langchain-pinecone"]
qdrant = ["langchain-qdrant"]
weaviate = ["langchain-weaviate"]
chroma = ["langchain-chroma"]
redis = ["langchain-redis"]
faiss = ["langchain-community", "faiss-cpu"]
cohere-rag = ["langchain-community", "cohere"]
azure-search = ["langchain-community", "azure-search-documents"]
kendra = ["langchain-aws", "boto3"]
vertex-search = ["langchain-google-vertexai"]
tavily = ["langchain-community", "tavily-python"]
arxiv = ["langchain-community", "arxiv"]
wikipedia = ["langchain-community", "wikipedia"]
pubmed = ["langchain-community"]
web-research = ["langchain-community", "google-search-results"]
you-search = ["langchain-community"]
bedrock = ["langchain-aws", "boto3"]
google-vertex-search = ["langchain-google-vertexai"]
pinecone-hybrid = ["langchain-pinecone", "pinecone-client"]
metal = ["langchain-community", "metal_sdk"]
milvus = ["langchain-milvus"]
vespa = ["langchain-community", "pyvespa"]
zep = ["langchain-community", "zep-python"]
zep-cloud = ["langchain-community", "zep-python"]
zilliz = ["langchain-milvus"]
pgvector = ["langchain-postgres"]

# Additional new retrievers
asknews = ["langchain-community"]
amazon-knowledge-bases = ["langchain-aws", "boto3"]
google-vertex-ai-search = ["langchain-google-vertexai"]
google-document-ai-warehouse = [
  "langchain-community",
  "google-cloud-documentai",
]
weaviate-hybrid = ["langchain-weaviate", "weaviate-client"]
qdrant-sparse = ["langchain-qdrant", "qdrant-client"]
docarray = ["langchain-community", "docarray"]
neuraldb = ["langchain-community", "thirdai"]
llamaindex = ["langchain-community", "llama-index"]
chatgpt-plugin = ["langchain-community"]

# Convenience groups
all-providers = [
  "langchain-openai",
  "langchain-anthropic",
  "langchain-google-genai",
  "langchain-google-vertexai",
  "langchain-aws",
  "langchain-mistralai",
  "langchain-groq",
  "langchain-cohere",
  "langchain-together",
  "langchain-fireworks",
  "langchain-huggingface",
  "langchain-ai21",
  "langchain-nvidia-ai-endpoints",
  "langchain-ollama",
  "langchain-upstage",
  "langchain-databricks",
  "langchain-ibm",
  "langchain-xai",
]

popular-providers = [
  "langchain-openai",
  "langchain-anthropic",
  "langchain-google-genai",
  "langchain-aws",
  "langchain-mistralai",
  "langchain-groq",
  "langchain-ollama",
]

# Retriever convenience groups
all-retrievers = [
  "langchain-core",
  "langchain",
  "langchain-community",
  "langchain-aws",
  "langchain-google-vertexai",
  "elasticsearch",
  "langchain-pinecone",
  "pinecone-client",
  "langchain-qdrant",
  "qdrant-client",
  "langchain-weaviate",
  "weaviate-client",
  "langchain-chroma",
  "langchain-redis",
  "langchain-milvus",
  "langchain-postgres",
  "faiss-cpu",
  "cohere",
  "azure-search-documents",
  "boto3",
  "tavily-python",
  "arxiv",
  "wikipedia",
  "metal_sdk",
  "pyvespa",
  "zep-python",
  "scikit-learn",
  "google-search-results",
  "google-cloud-documentai",
  "docarray",
  "thirdai",
  "llama-index",
]

popular-retrievers = [
  "langchain-core",
  "langchain",
  "langchain-community",
  "langchain-pinecone",
  "langchain-chroma",
  "faiss-cpu",
  "scikit-learn",
]

sparse-retrievers = ["langchain-community", "scikit-learn"]

vector-retrievers = [
  "langchain-core",
  "langchain-pinecone",
  "langchain-qdrant",
  "langchain-weaviate",
  "langchain-chroma",
  "langchain-milvus",
  "faiss-cpu",
]

api-retrievers = [
  "langchain-community",
  "arxiv",
  "wikipedia",
  "tavily-python",
  "cohere",
  "google-search-results",
]

cloud-retrievers = [
  "langchain-aws",
  "langchain-google-vertexai",
  "azure-search-documents",
  "boto3",
]
[tool.poetry.group.chat-models]
optional = true

[tool.poetry.group.chat-models.dependencies]
langchain-google-vertexai = "^2.0.24"


# Tool configurations - respect .gitignore in this package
[tool.ruff]
line-length = 100
target-version = "py312"
respect-gitignore = true
exclude = ["__pycache__", ".mypy_cache", ".pytest_cache", ".ruff_cache"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "N",
  "UP",
  "B",
  "A",
  "C4",
  "PIE",
  "T20",
  "Q",
  "SIM",
  "ARG",
  "ERA",
  "PL",
  "RUF",
]
ignore = ["E501", "D100", "D104", "D107"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["build/", "dist/", ".venv/", "__pycache__/", "*.egg-info/"]

[tool.trailrunner]
exclude = [
  "\\.git",
  "__pycache__",
  # Exclude Trunk’s cache so Fixit won’t follow it
  "\\.cache/trunk/.*",
  # Or if you have a .trunk folder:
  "\\.trunk/.*",
]
[tool.poetry.group]

[tool.poetry.group.docs.dependencies]
sphinx = "8.2.3"
sphinxcontrib-jquery = "^4.1"
sphinx-sitemap = "^2.6.0"        # Sitemap - Implemented 
sphinxcontrib-mermaid = "^1.0.0" # Diagrams - Implemented 
sphinxcontrib-youtube = "^1.4.1"
#sphinx-press-theme = "^0.9.1"
sphinx-autoapi = "^3.6.0"
sphinx-copybutton = "^0.5.2"
sphinx-togglebutton = "^0.3.2"
sphinx-autodoc-typehints = "^3.1.0"
sphinx-rtd-theme = "^3.0.2"
sphinx-tabs = "^3.4.5"
sphinx-autodoc2 = "^0.5.0"
sphinx-autobuild = "^2024.10.3"
sphinx-inline-tabs = "^2023.4.21"
myst-parser = "^4.0.1"
furo = "^2024.8.6"
doc8 = "^1.1.2"
codespell = "^2.4.1"                  # Unsure if implememnted?
sphinxcontrib-spelling = "^8.0.1"
pyenchant = "^3.2.2"
sphinxcontrib-openapi = "^0.8.4"
sphinxcontrib-httpdomain = "^1.8.1"
sphinx-pdf-generate = "^0.0.4"
sphinx-simplepdf = "^1.6.0"
readthedocs-sphinx-search = "^0.3.2"
sphinx-multiversion = "^0.2.4"
sphinxcontrib-versioning = "^2.2.1"
sphinxext-opengraph = "^0.10.0"
sphinx-needs = "^5.1.0"               # Unsure if needed
sphinx-gallery = "^0.19.0"
sphinx-exec-directive = "^0.6"
jupyter-cache = "^1.0.1"
pydata-sphinx-theme = "^0.16.1"
sphinx-prompt = "^1.10.0"
sphinx-codeautolink = "^0.17.0"       # UTILIZERD
sphinx-jinja2 = "^0.0.1"
sphinx-argparse = "^0.5.2"
sphinx-click = "^6.0.0"               # CLI - Unsure if implemeneted
sphinx-issues = "^5.0.1"              # Github Issues - NOT Implmented (yet)
sphinx-jsonschema = "^1.19.1"
sphinx-tippy = "^0.4.3"               #Tool Tips - Implemented 
sphinx-hoverxref = "^1.4.2"
sphinxemoji = "^0.3.1"
sphinx-last-updated-by-git = "^0.3.8"
#sphinx-paramlinks = "^0.6.0"
sphinxext-rediraffe = "^0.2.7"
sphinx-math-dollar = "^1.2.1"
sphinx-lint = "^1.0.0"
autodoc-pydantic = "^2.2.0"
sphinxcontrib-plantuml = "^0.30"
sphinxcontrib-drawio = "^0.0.17"
sphinxcontrib-images = "^1.0.1"
sphinxcontrib-seqdiag = "^3.0.0"             # Diagrams - Unsure if implemented 
sphinxcontrib-blockdiag = "^3.0.0"           # Diagrams - Unsure if implemented 
sphinx-autodocgen = "^1.4"
sphinxcontrib-fulltoc = "^1.2.0"             # Dont think we are using this
sphinx-external-toc = "^1.0.1"               # Unsure buyt dont think we are using this 
sphinx-thebe = "^0.3.1"                      # Theme 
mkdocs = "^1.6.1"                            # Using Sphinx
mkdocs-material = "^9.6.16"                  # Using Sphinx
mkdocstrings = "^0.30.0"                     # Using Sphinx
pdoc = "^15.0.4"                             # Using Sphinx
sphinx-autosummary-accessors = "^2025.3.1"   # UNSURE IF USING https://sphinx-autosummary-accessors.readthedocs.io/en/stable/whats-new.html
sphinx-pyproject = "^0.3.0"
sphinx-modern-theme = "^1.0.5"
sphinx-basic-ng = "^1.0.0b2"
myst-nb = "^1.3.0"
sphinx-typlog-theme = "^0.8.0"
autodocsumm = "^0.2.14"
sphinx-favicon = "^1.0.1"
sphinx-notfound-page = "^1.1.0"
sphinx-intl = "^2.3.1"
sphinx-git = "^11.0.0"                       # looking into 
sphinx-version-warning = "^1.1.2"
sphinx-contributors = "^0.2.7"
sphinx-substitution-extensions = "^2025.6.6"
sphinx-selective-exclude = "^1.0.3"
sphinx-revealjs = "^3.2.0"
sphinx-proof = "^0.2.1"
sphinx-exercise = "^1.0.1"
sphinx-jinja = "^2.0.2"
sphinx-removed-in = "^0.2.3"
sphinx-pyscript = "^0.1.0"
sphinx-autofixture = "^0.4.1"
sphinx-automagicdoc = "^0.0.2"
sphinx-me = "^0.3"                           #Don't need. 
sphinx-autoissues = "^0.0.1"
sphinx-autoindex = "^0.1.5"
sphinx-autopackagesummary = "^1.3"
sphinx-autopages = "^0.0.3"
sphinx-automodapi = "^0.20.0"
sphinx-autorun = "^2.0.0"
sphinx-cache = "^0.0.1"
sphinx-btn = "^0.1.2"
sphinx-changelog = "^1.6.0"
sphinx-carousel = "^1.2.0"
sphinx-charts = "^0.2.1"
sphinx-cmd = "^0.5.0"
sphinx-codefence = "^0.1.0"
sphinx-codelinks = "^0.1.2"                  # using auto code links unsure if need
sphinx-collapse = "^0.1.3"
sphinx-collections = "^0.2.0"
sphinx-combine = "^2024.12.30.1"
sphinx-comments = "^0.0.3"
sphinx-debuginfo = "^0.2.2.post1"
sphinx-desktop = "^20240301"
sphinx-diagrams = "^0.4.0"
sphinx-dust = "^1.2.4"                       # REMOVE - UNSURE IF NEEDED 
sphinx-fasvg = "^2.0.2"
sphinx-feedback = "^0.1.0"                   # REMOVE - Not sure what this is 
sphinx-galleria = "^2.1.0"
sphinx-mindmap = "^0.5.2"
sphinx-multiproject = "^1.0.0"
sphinx-openapi = "^1.0.10"
sphinx-polyversion = "^1.1.0"                # Multi-versioning Tool [ Not extension but looks decent ] 
sphinx-refdoc = "^0.3.1"
sphinx-reports = "^0.9.7"
sphinx-reredirects = "^1.0.0"                # Site Redirection - Implemented 
sphinx-sql = "^1.3.5"                        # SQL - NOT IMPLEMENTED 
sphinx-social = "^0.0.0"
sphinx-tags = "^0.4"
sphinx-tagtoctree = "^1.0.0"
sphinx-thebelab = "^0.0.6"                   # Theme - Remove , uunsure hwat it loosk like 
sphinx-timeline = "^0.2.1"
sphinx-toggleprompt = "^0.6.0"
sphinx-toml = "^0.0.4"
sphinx-treeview = "^1.1.1"                   #TOC - Implemeneted
sphinx-uml = "^0.3.2"
sphinx-typesafe = "^0.3"                     #Typing (UNSURE) - Unsure if Implemented 
sphinx-tsegsearch = "^1.2"
sphinx-variations = "^1.0.5"
sphinx-versions = "^1.1.3"
sphinx-versioning = "^0.1.5"
sphinx-visualized = "^0.4.0"
sphinx-watch = "^0.1.2"
sphinx-icontract = "^2.0.3"                  # Not used - Before and after thing, dont htink it integrates iwht pydantic  
sphinx-inlinecode = "^2.0.1"
sphinx-inplace = "^0.0.7"
sphinx-interrogatedb = "^1.3.1"
sphinx-lastupdate = "^1.0.0"
sphinx-library = "^1.1.3"                    # THEME - REMOVE
sphinx-mcp = "^0.1.1"
sphinx-markdown = "^1.0.2"
darglint2 = "^1.8.2"
pytest-doctestplus = "^1.4.0"
sphinx-testing = "^1.0.1"
pydoctor = "^25.4.0"
enum-tools = "^0.13.0"                       # Believed this is used for enums
sphinx-toolbox = "^3.8.1"
erdantic = "^1.0.6"                          # Used in pydantic models
sphinx-design = "^0.6.1"
sphinxcontrib-programoutput = "^0.18"
sphinxcontrib-jupyter = "^0.5.10"
sphinxcontrib-video = "^0.4.1"
seed-intersphinx-mapping = "^1.2.2"          #TODO 
sphinx-apischema = "^0.1"                    # Data class implemented
sphinx-exec-code = "^0.16"
sphinx-runpython = "^0.4.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
